--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Xiaoqing Guo, EE, CityU, City University of Hong Kong"> 
-<meta name="description" content="Xiaoqing Guo's home page">
+<meta name="keywords" content="Yating Huang, EE, SZU, Shenzhen University"> 
+<meta name="description" content="Yating Huang's home page">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
-<title>Xiaoqing Guo's homepage, City University of Hong Kong</title>
+<title>Yating Huang's homepage, Shenzhen University</title>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -27,65 +27,40 @@
 		<tr>
 			<td width="670">
 				<div id="toptitle">					
-					<h1><font face="Arial"> Xiaoqing Guo </font></h1>  <h1><font face="Arial"> 郭小青 </font></h1>
+					<h1><font face="Arial"> Yating Huang </font></h1>  <h1><font face="Arial"> 黄雅婷 </font></h1>
 				</div>
 
-				<h3><font face="Arial"> Ph.D. Student </font></h3>
+				<h3><font face="Arial"> M.S. Student </font></h3>
 				<p><font face="Arial"> 
-					Department of Electrical Engineering, <br>
-					City University of Hong Kong, <br>
-					Kowloon, Hong Kong. <br>
+					College of Computer Science and Software Engineering, <br>
+					Shenzhen University of, <br>
+					Shenzhen, China. <br>
 					<br>
-					<em>Email: <a href="xiaoqiguo2-c@my.cityu.edu.hk">xiaoqiguo2-c@my.cityu.edu.hk</a></em> <br>
-					<a href="./XiaoqingGUO.pdf"><em>[Curriculum Vitae]</em></a>
+					<em>Email: <a href="huangyating2019@email.szu.edu.cn">huangyating2019@email.szu.edu.cn</a></em> <br>
+					<a href="./YatingHuang.pdf"><em>[Curriculum Vitae]</em></a>
 				</font></p>
-				<p> <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=fo3rmtwAAAAJ"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
-				    <a href="https://www.researchgate.net/profile/Xiaoqing_Guo8"><img src="./pic/rg.png" height="30px" style="margin-bottom:-3px"></a>
-				    <a href="https://github.com/Guo-Xiaoqing"><img src="./pic/github.jpg" height="30px" style="margin-bottom:-3px"></a>
+				<p> 
+				    <a href="https://www.researchgate.net/profile/Yating-Huang-8"><img src="./pic/rg.png" height="30px" style="margin-bottom:-3px"></a>
+				    
 				</p>
 			</td>
 			<td>
-				<img src="./pic/xiaoqingguo3.jpeg" border="0" width="200"><br>
+				<img src="./pic/YatingHuang.jpg" border="0" width="200"><br>
 			</td>
 		</tr><tr>
 	</tr></tbody>
 </table>
 
 <p style="text-align:justify";><font face="Arial">
-	I am currently a third year (2020-2021) Ph.D. student in the <a href="https://www.ee.cityu.edu.hk/home/">Department of Electrical Engineering</a>, 
-	<a href="https://www.cityu.edu.hk/">City University of Hong Kong (CityU)</a>, supervised by Prof. <a href="http://www.ee.cityu.edu.hk/~yxyuan/index.htm" target="_blank">
-	Yixuan Yuan</a>. Before that, I received B. Eng. degree in Biomedical Engineering from the <a href="https://www.buaa.edu.cn/">Beihang University (BUAA)</a> in 2018.  
+	I am currently a third year (2020-2021) M.S. student in the <a href="http://csse.szu.edu.cn/cn/index.html">College of Computer Science and Software Engineering</a>, 
+	<a href="https://www.szu.edu.cn/">Shenzhen University (SZU)</a>, supervised by Prof. <a href="https://www.researchgate.net/profile/Linlin-Shen" target="_blank">
+	Linlin Shen</a>. Before that, I received B. S. degree in Information Management and Information System from the <a href="https://www.fjtcm.edu.cn/">Fujian University of Traditional Chinese Medicine (FJTCM)</a> in 2019.  
 </font></p>
 <p><font face="Arial">
 	My research interests include medical image analysis and deep learning.
 </font></p>
 
 
-<h2><font face="Arial"> News </font></h2>
-<ul style="list-style-type:none">
-   <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
-      [Sep 2021] One paper accepted by IEEE TMI <br> 
-      [Aug 2021] Outstanding Academic Performance Award (OAPA) of City University of Hong Kong <br>
-      [Aug 2021] Research Tuition Scholarship (RTS) of City University of Hong Kong <br>
-      [Jul 2021] One paper accepted by IROS 2021 <br> 
-      [Jun 2021] One paper accepted by MedIA <br> 
-      [May 2021] One paper early accepted by MICCAI 2021 <br> 
-      [Apr 2021] One paper accepted by JBHI <br> 
-      [Mar 2021] One paper accepted by MedIA <br> 
-      [Mar 2021] One paper accepted by CVPR 2021 <br> 
-      [Jan 2021] One paper accepted by IEEE TMI <br> 
-      [Dec 2020] One paper accepted by IEEE TMI <br> 
-      [Aug 2020] Outstanding Academic Performance Award (OAPA) of City University of Hong Kong <br>
-      [Aug 2020] Research Tuition Scholarship (RTS) of City University of Hong Kong <br>
-      [May 2020] One paper accepted by MedIA <br> 
-      [May 2020] One paper early accepted by MICCAI 2020 <br>
-      [Jan 2020] One paper accepted by ISBI 2020 <br> 
-      [Aug 2019] Outstanding Academic Performance Award (OAPA) of City University of Hong Kong <br>
-      [Aug 2019] Research Tuition Scholarship (RTS) of City University of Hong Kong <br>
-      [Jun 2019] One paper early accepted by MICCAI 2019 <br>
-      [Dec 2018] One paper accepted by ISBI 2019 <br>  
-   </font></p>
-</ul>
 
 
 
