--- a/index.html
+++ b/index.html
@@ -374,33 +374,7 @@
 </ul>
 	
 
-<h2><font face="Arial"> Professional Activities </font></h2>
-<ul style="list-style-type:none">
 
-	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
-              <strong> Journal Reviews </strong> <br> </font> </p> 
-	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
-		 IEEE Transactions on Medical Imaging (TMI)
-	      </font> </p> 
-         </li>
-	
-	
-	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
-              <strong> Conference Reviews </strong> <br> </font> </p> 
-	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
-		 MICCAI 2021, ISBI 2021, MICCAI 2019
-	      </font> </p> 
-         </li>
-
-	
-	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
-              <strong> Conference Presentations </strong> <br> </font> </p> 
-	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
-		 MICCAI 2019, Shenzhen, China  <br>
-		 ISBI 2019, Venice, Italy
-	      </font> </p> 
-         </li>
-	
 	
 	
 
@@ -417,7 +391,7 @@
 	</div>
 	<p><center><font face="Arial">
         <br>
-            &copy; Xiaoqing Guo | Last updated: Jan. 2021
+            &copy; Yating Huang | Last updated: Oct. 2021
         </font></center></p>
 		
 </div>
