--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 		
     <tr>	
 		<td width="206">
-		<img src="./pic/TSC-WNet.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		<img src="./pic/TSC-WNet.png" width="185px" height = "105" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><b>Tongue Size and Shape Classification Fusing Segmentation Features for Traditional Chinese Medicine Diagnosis</b> <br>
 		<b>Yating Huang</b>*, Xuechen Li*, Siting Zheng, Zhonglian Li, Sihan Li, Linlin Shen, Changen Zhou, Zhihui Lai.(* indicates equal contribution)<br>
-		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>IEEE TMI</b></i>), 2021 <br>
+		<p><em>Artificial Intelligence in Medicine</em> (<i><b>Under review</b></i>), 2021 <br>
 	        [<a href="https://www.researchgate.net/publication/354694326_Tongue_Size_and_Shape_Classification_Fusing_Segmentation_Features_for_Traditional_Chinese_Medicine_Diagnosis">paper</a>]
 		</td>
 	</tr>
@@ -94,10 +94,10 @@
 		
     <tr>	
 		<td width="206">
-		<img src="./pic/TU-Net.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		<img src="./pic/TU-Net.png" width="185px" height = "105" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><b>TU-Net: A Precise Network for Tongue Segmentation</b> <br>
-		<b>Yating Huang</b>, <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=C6fAQeIAAAAJ">Zhihui Lai</a>, Wenjing Wang. <br>
+		<b>Yating Huang</b>, Zhihui Lai, Wenjing Wang. <br>
 		<p><em>9th International Conference on Computing and Pattern</em> (<i><b>ICCPR 2020</b></i>), 2020 <br>
 	        [<a href="https://www.researchgate.net/publication/348414683_TU-Net_A_Precise_Network_for_Tongue_Segmentation">paper</a>]
 		</td>
@@ -113,77 +113,7 @@
 </tbody></table>
 		
 		
-<!--<h2><font face="Arial"> Publications </font></h2>
-<ul>
-    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
-            <b>Semi-supervised WCE Image Classification with Adaptive Aggregated Attention</b> <br> 
-         <i>   <b>Xiaoqing Guo</b>, Yixuan Yuan. </i><br> 
-	       Medical Image Analysis (<b>MedIA</b>), 2020 <br>
-	 [<a href="https://doi.org/10.1016/j.media.2020.101733">paper</a>][<a href="https://github.com/Guo-Xiaoqing/SSL_WCE">code</a>]
-	  </font>
-	 </p> </li>
-	
-		
-    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
-            <b>Joint Spatial-Wavelet Dual-Stream Network for Super-Resolution</b> <br> 
-         <i>   Zhen Chen, <b>Xiaoqing Guo</b>, <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=C6fAQeIAAAAJ">Chen Yang</a>, Bulat Ibragimov, Yixuan Yuan. </i><br> 
-	       International Conference on Medical Image Computing and Computer Assisted Intervention (<b>MICCAI 2020</b>), Lima, Peru. <br>
-	  </font>
-	 </p> </li>
 
-	
-    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
-            <b>Complementary Network with Adaptive Receptive Fields for Melanoma Segmentation</b> <br> 
-         <i>   <b>Xiaoqing Guo</b>, Zhen Chen, Yixuan Yuan. </i><br> 
-	       IEEE International Symposium on Biomedical Imaging (<b>ISBI 2020</b>), Iowa City, Iowa, USA. <br>
-	 [<a href="https://ieeexplore.ieee.org/document/9098417">paper</a>][<a href="https://github.com/Guo-Xiaoqing/Skin-Seg">code</a>]
-	  </font>
-	 </p> </li>
-
-	
-    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
-            <b>Domain Knowledge Based Brain Tumor Segmentation and Overall Survival Prediction</b> <br> 
-         <i>   <b>Xiaoqing Guo</b>, <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=C6fAQeIAAAAJ">Chen Yang</a>, Pak Lun Lam, Peter Y.M. Woo, Yixuan Yuan. </i><br> 
-	       Brain Lesion (BrainLes) workshop of MICCAI 2019, Shenzhen, China. <br>
-	 [<a href="https://link.springer.com/chapter/10.1007/978-3-030-46643-5_28">paper</a>][<a href="https://github.com/Guo-Xiaoqing/BraTS_OS">code</a>]
-	  </font>
-	 </p> </li>
-
-	
-    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
-            <b>Triple ANet: Adaptive Abnormal-aware Attention Network for WCE Image Classfication</b> <br> 
-         <i>   <b>Xiaoqing Guo</b>, Yixuan Yuan. </i><br> 
-	       International Conference on Medical Image Computing and Computer Assisted Intervention (<b>MICCAI 2019</b>), Shenzhen, China. <br>
-	 [<a href="https://link.springer.com/chapter/10.1007/978-3-030-32239-7_33">paper</a>][<a href="https://github.com/Guo-Xiaoqing/Triple-ANet">code</a>]
-	  </font>
-	 </p> </li>
-
-
-    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
-            <b>Prostate Segmentation with Encoder-Decoder Densely Connected Convolutional Network (ED-DenseNet)</b> <br> 
-         <i>   Yixuan Yuan, Wenjian Qin, <b>Xiaoqing Guo</b>, Mark Buyyounouski, Steve Hancock, Bin Han, Lei Xing. </i><br> 
-	       IEEE International Symposium on Biomedical Imaging (<b>ISBI 2019</b>), Venice, Italy. <br>
-	 [<a href="https://ieeexplore.ieee.org/abstract/document/8759498">paper</a>]
-	  </font>
-	 </p> </li>
-
-
-     <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
-            <b>RNN-stega: Linguistic steganography based on recurrent neural networks</b> <br> 
-         <i>  Zhongliang Yang, <b>Xiaoqing Guo</b>, Ziming Chen, Yongfeng Huang, Yujin Zhang </i><br> 
-	       IEEE Transactions on Information Forensics and Security (<b>IEEE TIFS</b>), 2018 <br>
-	 [<a href="https://ieeexplore.ieee.org/abstract/document/8470163">paper</a>] [<a href="https://github.com/YangzlTHU/RNN-Stega">code</a>] </font>	     
-	 </p> </li>
-	
-	
-    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
-            <b>Unsupervised end-to-end learning for deformable medical image registration</b> <br> 
-         <i>   Siyuan Shan, Wen Yan, <b>Xiaoqing Guo</b>, Eric I Chang, Yubo Fan, Yan Xu </i><br> 
-	       Tech report, arXiv, Nov, 2017 <br>
-	 [<a href="https://arxiv.org/abs/1711.08608">arXiv</a>]
-	  </font>
-	 </p> </li>	
-</ul>	-->
 	
 <h2><font face="Arial"> Honors & Awards </font></h2>
 <ul style="list-style-type:none">
@@ -202,19 +132,6 @@
 	
 
 
-	
-	
-	
-
-<!--  
-<div id="footer">
-	<div id="footer-text"></div>
-	
-        <p><center>
-      	<div id="clustrmaps-widget" style="width:40%">
-     
-	<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=lS6_kPlb3C-XGchIZy1ogXZ0tD_bo22juKrX_f3RuhI&cl=ffffff&w=a"></script>
- -->
 	
 	</div>
 	<p><center><font face="Arial">
