--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <p style="text-align:justify";><font face="Arial">
 	I am currently a third year (2021-2022) M.S. student in the <a href="http://csse.szu.edu.cn/cn/index.html">College of Computer Science and Software Engineering</a>, 
 	<a href="https://www.szu.edu.cn/">Shenzhen University (SZU)</a>, supervised by Prof. <a href="https://www.researchgate.net/profile/Linlin-Shen" target="_blank">
-	Yixuan Yuan</a>. Before that, I received B. S. degree in Information Management and Information System from the <a href="https://www.fjtcm.edu.cn/">Fujian University of Traditional Chinese Medicine (FJTCM)</a> in 2018.  
+	Yixuan Yuan</a>. Before that, I received B. S. degree in Information Management and Information System from the <a href="https://www.fjtcm.edu.cn/">Fujian University of Traditional Chinese Medicine (FJTCM)</a> in 2019.  
 </font></p>
 <p><font face="Arial">
 	My research interests include medical image analysis and deep learning.
@@ -118,14 +118,10 @@
 <h2><font face="Arial"> Honors & Awards </font></h2>
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
-		 Outstanding Academic Performance Award (OAPA), City University of Hong Kong, 2021  <br>
-		 Research Tuition Scholarship (RTS), City University of Hong Kong, 2021 - 2022  <br>
-		 Outstanding Academic Performance Award (OAPA), City University of Hong Kong, 2020  <br>
-		 Research Tuition Scholarship (RTS), City University of Hong Kong, 2020 - 2021  <br>
-		 Outstanding Academic Performance Award (OAPA), City University of Hong Kong, 2019  <br>
-		 Research Tuition Scholarship (RTS), City University of Hong Kong, 2019 - 2020  <br>
-		 Honorable Mention, Mathematical Contest in Modeling (MCM), 2016  <br>
-		 Grand Prize, the 25th “Feng Ru Cup” Competition of Innovation, Beihang University, 2015
+		 Special Scholarship, Shenzhen University, 2019 - 2020  <br>
+		 Outstanding Graduate, Fujian University of Traditional Chinese Medicine, 2019  <br>
+		 First-Class Scholarship, Fujian University of Traditional Chinese Medicine, 2018- 2019  <br>
+		 The Third Prize, 4th FJTCM 'Internet+'Innovation and Entrepreneurship Competition, 2018  
 	      </font> </p> 
          
 </ul>
