--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <p style="text-align:justify";><font face="Arial">
 	I am currently a third year (2021-2022) M.S. student in the <a href="http://csse.szu.edu.cn/cn/index.html">College of Computer Science and Software Engineering</a>, 
 	<a href="https://www.szu.edu.cn/">Shenzhen University (SZU)</a>, supervised by Prof. <a href="https://www.researchgate.net/profile/Linlin-Shen" target="_blank">
-	Yixuan Yuan</a>. Before that, I received B. S. degree in Information Management and Information System from the <a href="https://www.fjtcm.edu.cn/">Fujian University of Traditional Chinese Medicine (FJTCM)</a> in 2019.  
+	Linlin Shen</a>. Before that, I received B. S. degree in Information Management and Information System from the <a href="https://www.fjtcm.edu.cn/">Fujian University of Traditional Chinese Medicine (FJTCM)</a> in 2019.  
 </font></p>
 <p><font face="Arial">
 	My research interests include medical image analysis and deep learning.
