--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
 
-<h2><font face="Arial"> Selected Publications </font></h2>
+<h2><font face="Arial"> Publications </font></h2>
 <h3><font face="Arial"> Journal Papers </font> </h3>
 <table id="tbPublications" width="100%">
 	<tbody>
