--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </table>
 
 <p style="text-align:justify";><font face="Arial">
-	I am currently a third year (2021-2022) Master student in the <a href="http://csse.szu.edu.cn/cn/index.html">College of Computer Science and Software Engineering</a>, 
+	I am currently a third-year (2021-2022) MSc student in the <a href="http://csse.szu.edu.cn/cn/index.html">College of Computer Science and Software Engineering</a>, 
 	<a href="https://www.szu.edu.cn/">Shenzhen University (SZU)</a>, supervised by Prof. <a href="https://www.researchgate.net/profile/Linlin-Shen" target="_blank">
 	Linlin Shen</a>. Before that, I received Bachelor degree in Information Management and Information System from the <a href="https://www.fjtcm.edu.cn/">Fujian University of Traditional Chinese Medicine (FJTCM)</a> in 2019.  
 </font></p>
