--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <p style="text-align:justify";><font face="Arial">
 	I am currently a third-year (2021-2022) Master student in the <a href="http://csse.szu.edu.cn/cn/index">College of Computer Science and Software Engineering</a>, 
-	<a href="https://www.szu.edu.cn/">Shenzhen University (SZU)</a>, supervised by Prof. <a href="https://scholar.google.com.hk/citations?user=AZ_y9HgAAAAJ&hl=zh-CN&oi=ao" target="_blank">
+	<a href="https://www.szu.edu.cn/">Shenzhen University (SZU)</a>, supervised by Prof. <a href="https://www.researchgate.net/profile/Linlin-Shen" target="_blank">
 	Linlin Shen</a>. Before that, I received Bachelor degree in Information Management and Information System from the <a href="https://www.fjtcm.edu.cn/">Fujian University of Traditional Chinese Medicine (FJTCM)</a> in 2019.  
 </font></p>
 <p><font face="Arial">
