--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 				</font></p>
 				<p> 
 				    <a href="https://www.researchgate.net/profile/Yating-Huang-8"><img src="./pic/rg.png" height="30px" style="margin-bottom:-3px"></a>
-				   
+				    <a href="https://github.com/Yating-Huang"><img src="./pic/github.png" height="30px" style="margin-bottom:-3px"></a>
+				    <a href="https://www.linkedin.com/in/yating-huang-273a53224/"><img src="./pic/linkedin.png" height="30px" style="margin-bottom:-3px"></a>
 				</p>
 			</td>
 			<td>
@@ -114,8 +115,8 @@
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
 		 Special Scholarship, Shenzhen University, 2019 - 2020  <br>
 		 Outstanding Graduate, Fujian University of Traditional Chinese Medicine, 2019  <br>
-		 First-Class Scholarship, Fujian University of Traditional Chinese Medicine, 2018- 2019  <br>
-		 The Third Prize, 4th FJTCM 'Internet+'Innovation and Entrepreneurship Competition, 2018  
+		 Outstanding Undergraduate Thesis, Fujian University of Traditional Chinese Medicine, 2019  <br>  
+		 First-Class Scholarship, Fujian University of Traditional Chinese Medicine, 2018- 2019   
 	      </font> </p> 
          
 </ul>
@@ -126,7 +127,7 @@
 	</div>
 	<p><center><font face="Arial">
         <br>
-            &copy; Yating Huang | Last updated: Oct. 2021
+            &copy; Yating Huang | Last updated: Nov. 2021
         </font></center></p>
 		
 </div>
