--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				</font></p>
 				<p> 
 				    <a href="https://www.researchgate.net/profile/Yating-Huang-8"><img src="./pic/rg.png" height="30px" style="margin-bottom:-3px"></a>
-				    <a href="https://github.com/Yating-Huang"><img src="./pic/github.png" height="30px" style="margin-bottom:-3px"></a>
+				    <a href="https://github.com/Yating-Huang"><img src="./pic/github.jpg" height="30px" style="margin-bottom:-3px"></a>
 				    <a href="https://www.linkedin.com/in/yating-huang-273a53224/"><img src="./pic/linkedin.png" height="30px" style="margin-bottom:-3px"></a>
 				</p>
 			</td>
