--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 		<b>Yating Huang</b>*, Xuechen Li*, Siting Zheng, Zhonglian Li, Sihan Li, Linlin Shen, Changen Zhou, Zhihui Lai.(* indicates equal contribution)<br>
 		<p><em>Artificial Intelligence in Medicine</em> (<i><b>Under review</b></i>), 2021 <br>
 	        [<a href="https://www.researchgate.net/publication/354694326_Tongue_Size_and_Shape_Classification_Fusing_Segmentation_Features_for_Traditional_Chinese_Medicine_Diagnosis">paper</a>]
-		</td>
+		[<a href="https://github.com/Yating-Huang/TSC-WNet">code</a>]
+	    	</td>
 	</tr>
 	<tr></tr>
     <tr></tr>
@@ -101,6 +102,7 @@
 		<b>Yating Huang</b>, Zhihui Lai, Wenjing Wang. <br>
 		<p><em>9th International Conference on Computing and Pattern</em> (<i><b>ICCPR 2020</b></i>), 2020 <br>
 	        [<a href="https://www.researchgate.net/publication/348414683_TU-Net_A_Precise_Network_for_Tongue_Segmentation">paper</a>]
+		[<a href="https://github.com/Yating-Huang/TU-Net">code</a>]
 		</td>
 	</tr>
 	<tr></tr>
