--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ var _hmt = _hmt || [];
 		</td>		
 		<td><b>Tongue Size and Shape Classification Fusing Segmentation Features for Traditional Chinese Medicine Diagnosis</b> <br>
 		<b>Yating Huang</b>*, Xuechen Li*, Siting Zheng, Zhonglian Li, Sihan Li, Linlin Shen, Changen Zhou, Zhihui Lai.(* indicates equal contribution)<br>
-		<p><em>Computers in Biology and Medicine</em> (<i><b>Under review</b></i>), 2021 <br>
+		<p><em>Frontiers in Neuroinformatics</em> (<i><b>Under review</b></i>), 2021 <br>
 	        [<a href="https://www.researchgate.net/publication/354694326_Tongue_Size_and_Shape_Classification_Fusing_Segmentation_Features_for_Traditional_Chinese_Medicine_Diagnosis">paper</a>]
 		[<a href="https://github.com/Yating-Huang/TSC-WNet">code</a>]
 	    	</td>
